<resources>
    <string name="app_name">AnimeParserES</string>
    <string name="desconocido">Desconocido</string>
    <string name="categorias">Categorias:</string>
    <string name="episodios">Episodios</string>
    <string name="episodio">Episodio</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="tipo_de_show">Tipo de Show</string>
    <string name="link">Link</string>
    <string name="descripcion">Descripcion</string>
    <string name="alternativo_s">Alternativo(s)</string>
    <string name="titulo">Titulo</string>
</resources>