<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/animeScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/animePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription,VectorDrawableCompat" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:columnCount="2">

                <TextView
                    android:id="@+id/titletext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/titulo"
                    android:textSize="18sp"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/alternativenamestext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/alternativo_s"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/desctext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/descripcion"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/linktext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/link"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/typetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/tipo_de_show"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="4" />

                <TextView
                    android:id="@+id/punctuationtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/puntuacion"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="5" />

                <TextView
                    android:id="@+id/episodetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/episodio"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="6" />

                <TextView
                    android:id="@+id/episodioText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:ems="10"
                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="6" />

                <TextView
                    android:id="@+id/puntuacionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:ems="10"
                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="5" />

                <TextView
                    android:id="@+id/typeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:ems="10"

                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="4" />

                <EditText
                    android:id="@+id/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:layout_marginLeft="8sp"
                    android:ems="10"
                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="3"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    tools:ignore="LabelFor" />

                <TextView

                    android:id="@+id/descText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:ems="12"
                    android:maxLines="10"
                    android:singleLine="false"
                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:ems="10"

                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/altTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:ems="10"

                    android:text="@string/desconocido"
                    android:textSize="18sp"
                    app:layout_column="1"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/categoriestext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/categorias"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="7" />

                <TextView
                    android:id="@+id/episodelinkstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/episodios"
                    android:textSize="18sp"
                    app:layout_column="0"
                    app:layout_row="9" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/episodesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_row="10"
                    tools:itemCount="4"
                    tools:listitem="@layout/category" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_row="8"
                    tools:itemCount="4"
                    tools:listitem="@layout/category">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>